gdbus: Fix memory leak in gdbusmethodinvocation.c

https://bugzilla.gnome.org/show_bug.cgi?id=780924